<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ট্যাক্সিকিউশন বাংলা</string>
    <string name="hint_text">এখানে আপনার মোট আয় লিখুন</string>
    <string name="slab">ট্যাক্সের স্ল্যাব</string>
    <string name="tax_rate">রেট</string>
    <string name="tax_amount">ট্যাক্সযোগ্য অর্থ</string>
    <string name="tax">ট্যাক্স</string>
    <string name="firstSlab">প্রথম ৩ লক্ষ টাকা </string>
    <string name="secSlab">পরবর্তী ১ লক্ষ টাকা </string>
    <string name="thirdSlab">পরবর্তী ৩ লক্ষ টাকা </string>
    <string name="fourthSlab">পরবর্তী ৪ লক্ষ টাকা </string>
    <string name="fifthSlab">পরবর্তী ৫ লক্ষ টাকা </string>
    <string name="sixthSlab">পরবর্তী টাকার উপরে </string>
    <string name="total_amount">সর্বমোট টাকা </string>
    <string name="total_tax">মোট ট্যাক্স</string>
    <string name="check">হিসেব করুন!!</string>
    <string name="main_intro">আয়কর হচ্ছে সরকারি রাজস্ব বা আয়ের সবচেয়ে গুরুত্বপূর্ণ উৎস। সাধারণ অর্থে যাদের উপর কর আরোপ করা হয় তাদেরকে বলা হয় করদাতা । প্রত্যক্ষ কর সাধারণত ব্যক্তির উপর প্রয়োগ করা হয়। আয়কর অধ্যাদেশ ১৯৮৪ এর অধ্যায় ১ থেকে ২৩ পর্যন্ত আয়কর আইন এবং প্রয়োগ এর বিস্তারিত রয়েছে।</string>
    <string name="salary_intro">একটা পরিবার বা সংসার চালানোর জন্য যেমন পরিবারের কর্তা বা উপার্জনশীল সদস্যদেরকে খরচ দিতে হয় ঠিক তেমনি একটা দেশ বা রাষ্ট্র চালানোর জন্য দেশের জনগণকে খরচ দিতে হয়। রাষ্ট্রের সকল জনসাধারনের স্বার্থে রাষ্ট্রের ব্যয় নির্বাহের জন্য সরকারকে প্রদত্ত বাধ্যতামূলক অর্থ হল আয়কর।আয়কর হচ্ছে সরকারি রাজস্ব বা আয়ের সবচেয়ে গুরুত্বপূর্ণ উৎস। সাধারণ অর্থে যাদের উপর কর আরোপ করা হয় তাদেরকে বলা হয় করদাতা ।
আজকের এই আর্টিকেলের আমরা আলোচনা করব, আয়কর কাদের উপর প্রযোজ্য, কোন ধরনের আয়ের উপর কর দিতে হয়, একজন ব্যক্তির কি পরিমান ইনকাম হলে তাকে আয়কর দিতে হয়, আয়কর প্রদানের সময়সীমা এবং আয়কর হার ইত্যাদি সম্পর্কে।</string>
    <string name="intro">করযোগ্য আয়ের ভিত্তিতে যাদের রিটার্ন দাখিল করতে হবে: ১. কোনো পুরুষ করদাতার আয় যদি বছরে ৩ লাখ টাকার বেশি হয়। ২. কোনো মহিলা, তৃতীয় লিঙ্গের করদাতা এবং ৬৫ বছর বা তদূর্ধ্ব বয়সের করদাতার আয় যদি বছরে ৩ লাখ ৫০ হাজার টাকার বেশি হয়। ৩. গেজেটভূক্ত যুদ্ধাহত মুক্তিযোদ্ধা করদাতার আয় যদি বছরে ৪ লাখ ৭৫ হাজার টাকার বেশি হয়। ৪. প্রতিবন্ধী করদাতার আয় বছরে যদি ৪ লাখ ৫০ হাজার টাকার বেশি হয়। উপর্যুক্ত করসীমা পর্যন্ত আয়ের ক্ষেত্রে কোনো ট্যাক্স দিতে হয় না, তবে শূন্য রিটার্ন দাখিল করতে হয়। উল্লেখ্য যে, আয়কর রিটার্ন দাখিল করলেই কর দিতে হবে না। বরং ব্যক্তি বা স্বত্বাধিকারী যখন করসীমার উপর আয় করবেন সে আয়ের উপর নির্ধারিত হারে ট্যাক্স দিতে হবে।</string>
    <string name="about_talk">স্বাগতম, আমি সুমন কুমার। বৃহত্তর পাবনা জেলার ঈশ্বরদী উপজেলার সন্তান। আমি ২০২০ সালে বাংলাদেশ কারিগরি বোর্ডের অধীনে কম্পিউটার অপারেশন বিষয়ে উচ্চ মাধ্যমিক এ উর্ত্তীণ হয়ে বর্তমানে একটি চাকরির পাশাপাশি বঙ্গ একাডেমীতে  এপপ্স ডেভেলপমেন্ট শিখছি। এই এপপ্স টি আমাদের একাডেমীর সিজন ২ এর প্রথম এপপ্স চ্যালেঞ্জ এ অংশগ্রহণ করার উদ্দেশে ডিজাইন এবং ডেভেলপ করেছি আমি। এপপ্স টি তৈরির উদ্দেশ ব্যবহারকারী কে একটি সহজ এবং কার্যকারী অনুভূতি দেওয়া।</string>
    <string name="finance_year_21_22">অর্থ বছর ২১-২২</string>
    <string name="type_of_tax">ক্যাটাগরি নির্বাচন করুন!</string>
    <string name="notice_massage">গণপ্রজাতন্ত্রী বাংলাদেশ সরকার কতৃক ট্যাক্সের জন্য নিৰ্দিষ্ট চারটি শ্রেণী বিভাজন করা হয়েছে।</string>
    <string name="male">পুরুষ</string>
    <string name="female">নারী/তৃতীয় লিঙ্গ/৬৫+</string>
    <string name="disable_person">প্রতিবন্ধী</string>
    <string name="freedom_fighter">মুক্তিযোদ্ধা</string>
    <string name="cancel">বাতিল করুন!!</string>
    <string name="okay">Okay</string>
    <string name="disable_child">প্রতিবন্ধী সন্তান</string>
    <string name="instraction_dash">নির্দেশিকা</string>
    <string name="slab_dash">মূল ট্যাক্স</string>
    <string name="prements">প্রেমেন্টস</string>
    <string name="e_return">রিটার্ন জমা দিন</string>
    <string name="salarytax">স্যালারি ট্যাক্স</string>
    <string name="tax_zone">ট্যাক্স জোন</string>
    <string name="about_us">এপপ্স সম্পর্কে</string>
    <string name="zero_p">0%</string>
    <string name="five_p">5%</string>
    <string name="ten_p">10%</string>
    <string name="fiftiin_p">15%</string>
    <string name="twnty_p">20%</string>
    <string name="twntyfive_p">25%</string>
    <string name="basic_salary">মূল বেতন</string>
    <string name="bonus">বিশেষ বেতন</string>
    <string name="past_salary">বকেয়া বেতন</string>
    <string name="house_rent">বাড়ি ভাড়া</string>
    <string name="medical_allowance">চিকিৎসা ভাতা</string>
    <string name="surgery_cost">সার্জারি খরচ</string>
    <string name="travel_cost">যাতায়াত ভাতা</string>
    <string name="festival_bonus">উৎসব বোনাস</string>
    <string name="servant_allowance">পরিচারক ভাতা</string>
    <string name="holiday_allowance">ছুটি ভাতা</string>
    <string name="honorary_gift">সম্মানী পুরষ্কার</string>
    <string name="overTime">ওভার টাইম</string>
    <string name="ananul_taxable_income">বাৎসরিক করযোগ্য আয়</string>
    <string name="annul_taxfree_income">বাৎসরিক কর রেয়াত</string>
    <string name="monthly">মাসিক</string>
    <string name="bokeya_beton_hint">যদি থাকে</string>
    <string name="festival_bonus_hint">অর্থ বছরে যে কয়টি</string>
    <string name="yearly">বাৎসরিক</string>
    <string name="total_annul_hint">সর্বমোট বাৎসরিক আয়</string>
    <string name="govtWebSite">সরকারি ওয়েবসাইট</string>
    <string name="about_dialog_text">আমার ডেভেলপ করা আরো এপপ্স দেখুন!!</string>
    <string name="hint_dialog_button_txt">দেখুন!!</string>


    <dimen name="heading_size">14sp</dimen>
    <dimen name="Default">10sp</dimen>
    <dimen name="shadow">3sp</dimen>
    <dimen name="much_bold">12sp</dimen>
    <dimen name="head_bold">16sp</dimen>
    <dimen name="head_bolder">20sp</dimen>
</resources>