<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_dark"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/base"
            android:alpha=".9"
            />
        <TextView
            android:id="@+id/text_morq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:textSize="@dimen/heading_size"
            android:fontFamily="@font/normal"
            android:focusableInTouchMode="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:gravity="top"
            android:layout_marginTop="-20dp"
            android:textColor="@color/white"
            android:alpha="1"
            android:textEditPasteWindowLayout="@string/intro"
            android:singleLine="true"
            android:text="@string/intro" />
    </LinearLayout><!--        morque_text-->
    <!--Upper color bord-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/singecolor_button"
        style="@style/Widget.MaterialComponents.CardView"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/appName_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:elevation="@dimen/Default"
            android:fontFamily="@font/titir"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/head_bold" />


    </LinearLayout><!--Upper color bord-->
    <!--    UpperVictor-->
    <!--        mainCard-->
    <LinearLayout
        android:id="@+id/mainCard_salary"
        android:layout_width="280dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-50dp"
        android:background="@drawable/tnas_curved25"
        android:elevation="@dimen/heading_size"
        android:orientation="vertical"
        style="@style/Widget.MaterialComponents.CardView"
        >
        <!--            Row-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_titles"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="7dp"
            android:layout_gravity="center_horizontal"
            >

            <LinearLayout
                android:id="@+id/heading1_slab"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:background="@drawable/left_curev_base_color"
                android:elevation="@dimen/shadow"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--dataHeading-->
                <TextView
                    android:id="@+id/header_title1"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:elevation="10dp"
                    android:fontFamily="@font/bdf"
                    android:gravity="center"
                    android:text="@string/slab"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Default" />
                <!--dataHeading-->

                <!--dataHeading-->
                <TextView
                    android:id="@+id/header_title2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="10dp"
                    android:fontFamily="@font/bdf"
                    android:gravity="center|center_vertical"
                    android:text="@string/tax_rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Default" />
                <!--dataHeading-->

            </LinearLayout><!--                firstCol-->
            <!--          secCol-->
            <LinearLayout
                android:id="@+id/heading2_slab"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@drawable/right_courved_white"
                android:elevation="@dimen/shadow"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heading1_slab"
                app:layout_constraintTop_toTopOf="parent">
                <!--dataHeading-->
                <TextView
                    android:id="@+id/header_title3"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="10dp"
                    android:fontFamily="@font/bdf"
                    android:gravity="center"
                    android:text="@string/tax_amount"
                    android:textColor="@color/base"
                    android:textSize="@dimen/Default" />
                <!--dataHeading-->

                <!--dataHeading-->
                <TextView
                    android:id="@+id/header_title4"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:elevation="10dp"
                    android:fontFamily="@font/bdf"
                    android:gravity="center|center_vertical"
                    android:text="@string/tax"
                    android:textColor="@color/base"
                    android:textSize="@dimen/Default" />
                <!--dataHeading-->
            </LinearLayout><!--          secCol-->

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--Row-->



    </LinearLayout><!--        mainCard-->



</LinearLayout><!--parent-->